--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,23 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+.errors-contact {
+    background: #F2DEDE;
+    border-radius: 7px;
+    color: #66615B;
+    padding: 10px 15px 15px 15px;
+    margin: 0 auto 10px auto;
+    width: 90%;
+    text-align: left;
+  }
+  
+  .errors {
+    background: #F2DEDE;
+    border-radius: 7px;
+    color: #66615B;
+    padding: 10px 15px 15px 15px;
+    margin: -12px auto 10px auto;
+    width: 98%;
+    text-align: left;
+  }
