--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,15 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-card class="multimediaEdit">
+    <img src="../../../assets/img/imagen.png" class="multimediaCards">
+    <h3 style="margin-top: -45px;
+    margin-left: 60px;"><b>Photo Album</b></h3>
+  </ion-card>
+
+  <ion-card class="multimediaEdit">
+    <img src="../../../assets/img/video.png" class="multimediaCards">
+    <h3 style="margin-top: -45px;
+    margin-left: 95px; color: white;"><b>Videos</b></h3>
+  </ion-card>
+
 </ion-content>
