--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,55 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-item-divider color="light" class="cssItem">
+    <ion-label>Notas del 06/09/2023</ion-label>
+  </ion-item-divider>
+  <ion-row>
+    <ion-col size="6">
+      <div class="color1">
+        <label class="textfechalit">06/09/2023 11:17:45</label>
+        <br>
+        <label class="textTitulo biography2">Test Link</label>
+        <div class="biography">acceder al link: https://...</div>
+        <label class="textPara">Para:</label>
+        <br>
+        <label class="textCodigo"> Alumno prueba prueba </label>
+        <br>
+        <label class="textPara">Prueba prueba</label>
+      </div>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="6">
+      <div class="color1">
+        <label class="textfechalit">06/09/2023 11:17:45</label>
+        <br>
+        <label class="textTitulo biography2">Test Link</label>
+        <div class="biography">acceder al link: https://...</div>
+        <label class="textPara">Para:</label>
+        <br>
+        <label class="textCodigo"> Alumno prueba prueba </label>
+        <br>
+        <label class="textPara">Prueba prueba</label>
+      </div>
+    </ion-col>
+  </ion-row>
+  <ion-item-divider color="light" class="cssItem">
+    <ion-label>Notas del 06/09/2023</ion-label>
+  </ion-item-divider>
+  <ion-row>
+    <ion-col size="6">
+      <div class="color1">
+        <label class="textfechalit">06/09/2023 11:17:45</label>
+        <br>
+        <label class="textTitulo biography2">Test Link</label>
+        <div class="biography">acceder al link: https://...</div>
+        <label class="textPara">Para:</label>
+        <br>
+        <label class="textCodigo"> Alumno prueba prueba </label>
+        <br>
+        <label class="textPara">Prueba prueba</label>
+      </div>
+    </ion-col>
+  </ion-row>
+
 </ion-content>
