--- a/src/global.scss
+++ b/src/global.scss
@@ -44,3 +44,18 @@
     width: 98%;
     text-align: left;
   }
+
+  ion-modal.width-height {
+    --border-radius: 8px 30px 30px 30px;
+    align-items: center !important;
+    --height: 40% !important;
+    --width: 30% !important;
+    min-width: 250px !important;
+    --backdrop-opacity: 0.4 !important;
+    top: -17% !important;
+  
+    @media screen and (max-width: 420px) {
+        --height: 45% !important;
+        --width: 90% !important;
+    }
+  }
