--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,4 +1,6 @@
-<ion-content [fullscreen]="true" class="ion-padding">
+<app-header titulo="notificaciones"></app-header>
+
+<ion-content class="ion-padding">
   
   <ion-item *ngFor="let notificacion of notificaciones">
         <ion-col size="2">
