Agregando Modals de Materias y Tareas pendientes 24/10/2023

--- a/src/app/pages/circular/circular.page.html
+++ b/src/app/pages/circular/circular.page.html
@@ -23,5 +23,9 @@
     <ion-icon slot="start" name="share-social-outline"></ion-icon>
     COMPARTIR
   </ion-button>
+
+  <p>
+    {{ titulo }}
+  </p>
   
 </ion-content>
