--- a/src/app/pages/circulares/circulares.page.html
+++ b/src/app/pages/circulares/circulares.page.html
@@ -2,7 +2,7 @@
 
 <ion-content class="ion-padding">
   
-  <ion-card *ngFor="let circular of circulares" (click)="abrirCircular()">
+  <ion-card *ngFor="let circular of circulares; let i = index" (click)="abrirCircular(i)">
     <ion-card-title class="ion-padding-horizontal"> {{ circular.fecha_publicacion }} {{ circular.hora_publicacion }} </ion-card-title>
     <ion-card-subtitle class="ion-padding-horizontal"> {{ circular.titulo }} </ion-card-subtitle>
     <ion-card-subtitle class="ion-padding-horizontal"> {{ circular.descripcion }} </ion-card-subtitle>
