--- a/src/app/pages/circular/circular.page.html
+++ b/src/app/pages/circular/circular.page.html
@@ -11,21 +11,37 @@
 
 <ion-content class="ion-padding">
 
-  <ion-button size="small">
-    <ion-icon slot="start" name="search-circle-outline"></ion-icon>
-    VER
-  </ion-button>
-  <ion-button size="small">
-    <ion-icon slot="start" name="cloud-download-outline"></ion-icon>
-    DESCARGAR
-  </ion-button>
-  <ion-button size="small">
-    <ion-icon slot="start" name="share-social-outline"></ion-icon>
-    COMPARTIR
-  </ion-button>
+  <div class="botones">
+    <ion-button size="small" (click)="ver()">
+      <ion-icon slot="start" name="search-circle-outline"></ion-icon>
+      VER
+    </ion-button>
+    <ion-button size="small" (click)="descargar()">
+      <ion-icon slot="start" name="cloud-download-outline"></ion-icon>
+      DESCARGAR
+    </ion-button>
+    <ion-button size="small">
+      <ion-icon slot="start" name="share-social-outline"></ion-icon>
+      COMPARTIR
+    </ion-button>
+  </div>
 
-  <p>
-    {{ titulo }}
-  </p>
+  <div>
+    <p>
+      {{ titulo }}
+    </p>
+    <p>
+      {{ fecha }} {{ hora }}
+    </p>
+    <p>
+      {{ descripcion }}
+    </p>
+  </div>
+  <div class="ion-padding">
+    <p class="ion-padding">
+      {{ autorizacion }}
+    </p>
+  </div>
+
   
 </ion-content>
