--- a/src/app/pages/photos/photos.page.html
+++ b/src/app/pages/photos/photos.page.html
@@ -1,13 +1,17 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>photos</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header titulo="Photo Album"></app-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">photos</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+
+  <ion-card *ngFor="let album of albumes, let i = index">
+
+    <swiper-container>
+      <swiper-slide *ngFor="let photos of album.imagenes; let a = index" >
+        <img src="{{ photos.foto }}">
+      </swiper-slide>
+    </swiper-container>
+    <p> {{ album.texto }} </p>
+    <p> {{ album.fecha }} </p>
+    <p *ngFor="let alumnos of album.alumnos; let i = index"> {{ alumnos.alumno }} </p>
+  </ion-card>
+
 </ion-content>
