--- a/src/app/pages/grados/grados.page.html
+++ b/src/app/pages/grados/grados.page.html
@@ -2,7 +2,7 @@
 
 <ion-content class="ion-padding">
 
-  <ion-card *ngFor="let seccion of secciones">
+  <ion-card *ngFor="let seccion of secciones; let i = index" (click)='verAlumnos(i)'>
     <ion-card-title color="light"> {{ seccion.grado_descripcion }} Seccion: {{ seccion.seccion_descripcion }} </ion-card-title>
   </ion-card>
 
