--- a/src/app/pages/photos/photos.page.html
+++ b/src/app/pages/photos/photos.page.html
@@ -1,4 +1,14 @@
-<app-header titulo="Photo Album"></app-header>
+<ion-header>
+  <ion-toolbar color="primary">
+
+    <ion-button (click)="cerrar()" slot="start">
+      <ion-icon name="arrow-back-outline" slot="start"></ion-icon>Atras
+    </ion-button>
+    
+    <ion-title>Photo Album</ion-title>
+
+  </ion-toolbar>
+</ion-header>
 
 <ion-content class="ion-padding">
 
