--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,3 @@
-
 <ion-menu side="start" menuId="menu" contentId="main" mode="md">
   <ion-header>
     <ion-toolbar class="menu" color="primary">
@@ -12,10 +11,12 @@
     </ion-item>
     <ion-menu-toggle *ngFor="let c of componentes">
       <ion-list>
-        <ion-item (click)="navegar( c.redirectTo )">
-          <ion-icon [name]="c.icon" slot="start" color="primary"></ion-icon>
-          <ion-label color="primary">{{ c.name }}</ion-label>
-        </ion-item>
+        <ion-menu-toggle>
+          <ion-item (click)="navegar( c.redirectTo )">
+            <ion-icon [name]="c.icon" slot="start" color="primary"></ion-icon>
+            <ion-label color="primary">{{ c.name }}</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
       </ion-list>
     </ion-menu-toggle>
   </ion-content>
