--- a/src/app/pages/padres/notificaciones/notificaciones.page.html
+++ b/src/app/pages/padres/notificaciones/notificaciones.page.html
@@ -1,13 +1,23 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>notificaciones</ion-title>
+    <ion-title>Notificaciones</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">notificaciones</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  
+  <ion-item *ngFor="let notificacion of notificaciones">
+    <ion-col size="2">
+      <ion-avatar item-start>
+        <img src="{{notificacion.url_logo}}">
+      </ion-avatar>
+    </ion-col>
+    <label class="{{notificacion.clase}}">
+      <p style="margin-bottom: -9px;"> {{notificacion.created_at}} </p>
+      <p style="margin-bottom: -9px;"> {{notificacion.message}} </p>
+      <p> {{notificacion.categoria}} </p>
+    </label>
+    <ion-icon name="arrow-forward" slot="end"></ion-icon>
+  </ion-item>
+  
 </ion-content>
