--- a/src/app/pages/postit/postit.page.html
+++ b/src/app/pages/postit/postit.page.html
@@ -1,13 +1,68 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>postit</ion-title>
+<ion-header>
+  <ion-toolbar color="primary">
+
+    <ion-button (click)="cerrar()" slot="start">
+      <ion-icon name="arrow-back-outline" slot="start"></ion-icon>Atras
+    </ion-button>
+    
+    <ion-title>Postit</ion-title>
+
+    <ion-button (click)="add()" slot="end">
+      <ion-icon name="add" slot="icon-only"></ion-icon>
+    </ion-button>
+
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">postit</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+
+  <ion-card class="ion-padding">
+    <ion-card-title> {{ gradoDesc }} Seccion: {{ seccionDesc }} </ion-card-title>
+  </ion-card>
+
+  <ion-segment value="todos" (ionChange)="segmentChanged($event)">
+    <ion-segment-button value="todos">
+      <ion-label>TODOS</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="alumnos">
+      <ion-label>ALUMNOS</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+
+  <ng-container  *ngIf="showPostits">
+    <ng-container *ngFor="let fecha of postits; let p = index">
+      <ion-item-divider color="light" class="cssItem">
+        <ion-label>Notas del {{ fecha.date_postit[0].date_grupo }}</ion-label>
+      </ion-item-divider>
+      <ng-container *ngFor="let postit of fecha.date_postit; let i = index">
+        <ion-row>
+          <ion-col size="6">
+            <div class="color1" (click)="detallePostit(p, i)">
+              <label class="textfechalit">{{ postit.fecha }}</label>
+              <br>
+              <label class="textTitulo biography2">{{ postit.titulo }}</label>
+              <div class="biography">{{ postit.descripcion }}</div>
+              <label class="textPara">Para:</label>
+              <br>
+              <label class="textCodigo"> {{ postit.alumno_name }} </label>
+              <br>
+              <label class="textPara">{{ postit.seccion }}</label>
+            </div>
+          </ion-col>
+        </ion-row>
+      </ng-container>
+    </ng-container>
+  </ng-container>
+
+  <ng-container *ngIf="showAlumnos">
+    <ion-list>
+      <ion-item *ngFor="let alumno of alumnos" detail>
+        <ion-avatar slot="start">
+          <img src="{{ alumno.url_foto }}" />
+        </ion-avatar>
+        <ion-label> {{ alumno.nombre }} </ion-label>
+      </ion-item>
+    </ion-list>
+  </ng-container>
+
 </ion-content>
