Home de Padres terminados y Arreglos en Maestros Y directores 28Dic

--- a/src/app/pages/alumnos/alumnos.page.html
+++ b/src/app/pages/alumnos/alumnos.page.html
@@ -23,9 +23,10 @@
       <ion-label> {{ alumno.nombre }} </ion-label>
     </ion-item>
   </ion-list>
-  <ion-infinite-scroll threshold="100px" (ionInfinite)="InfiniteScroll($event)">
+  
+  <!-- <ion-infinite-scroll threshold="100px" (ionInfinite)="InfiniteScroll($event)">
     <ion-infinite-scroll-content loadingSpinner="crescent" loadingText="Cargando...">
     </ion-infinite-scroll-content>
-  </ion-infinite-scroll>
+  </ion-infinite-scroll> -->
 
 </ion-content>
