--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -4,7 +4,7 @@
     </div>
     <ion-card class="body animate__animated animate__bounceInDown">
       <div class="img">
-        <img src="../../../assets/img/logo.jpg" class="animate__animated animate__bounce">
+        <img src="{{ logo }}" class="animate__animated animate__bounce">
       </div>
       <form (ngSubmit)="login()" [formGroup]="loginForm">
         <ion-list>
