--- a/src/app/pages/circular/circular.page.html
+++ b/src/app/pages/circular/circular.page.html
@@ -11,37 +11,38 @@
 
 <ion-content class="ion-padding">
 
-  <div class="botones">
-    <ion-button size="small" (click)="ver()">
-      <ion-icon slot="start" name="search-circle-outline"></ion-icon>
-      VER
-    </ion-button>
-    <ion-button size="small" (click)="descargar()">
-      <ion-icon slot="start" name="cloud-download-outline"></ion-icon>
-      DESCARGAR
-    </ion-button>
-    <ion-button size="small">
-      <ion-icon slot="start" name="share-social-outline"></ion-icon>
-      COMPARTIR
-    </ion-button>
-  </div>
+  <ng-container *ngFor="let circular of circular">
+    <ion-img src="{{ circular.imagen }}"></ion-img>
 
-  <div>
-    <p>
-      {{ titulo }}
-    </p>
-    <p>
-      {{ fecha }} {{ hora }}
-    </p>
-    <p>
-      {{ descripcion }}
-    </p>
-  </div>
-  <div class="ion-padding">
-    <p class="ion-padding">
-      {{ autorizacion }}
-    </p>
-  </div>
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col size="6"></ion-col>
+        <ion-col size="6">
+          <ion-button expand="full" href="{{ circular.link }}">
+            <ion-icon slot="icon-only" name="document-outline" class="ion-padding-end"></ion-icon>
+            Ver
+          </ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="6"></ion-col>
+        <ion-col size="6">
+          <ion-button expand="full" href="{{ circular.descarga }}">
+            <ion-icon slot="icon-only" name="cloud-download-outline" class="ion-padding-end"></ion-icon>
+            Descargar
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <div class="ion-padding">
+      <ion-label class="ion-padding-top, ion-padding-start">{{ circular.titulo }}</ion-label><br>
+      <ion-label class="ion-padding-start">{{ circular.fecha_publicacion }} {{
+        circular.hora_publicacion}}</ion-label><br>
+      <ion-label class="ion-padding-start">{{ circular.descripcion}}</ion-label>
+    </div>
+    <div class="ion-text-center">
+      <ion-label><b>{{ circular.requiere_autorizacion }}</b></ion-label>
+    </div>
+  </ng-container>
 
-  
 </ion-content>
