--- a/src/app/pages/grados/grados.page.html
+++ b/src/app/pages/grados/grados.page.html
@@ -13,35 +13,35 @@
       <ion-list>
         <ion-menu-toggle>
           <ion-item routerLink="/grados">
-            <ion-icon name="" slot="start" color="primary"></ion-icon>
+            <ion-icon name="school-outline" slot="start" color="primary"></ion-icon>
             <ion-label color="primary">Alumnos</ion-label>
           </ion-item>
           <ion-item (click)="verTareas()">
-            <ion-icon name="" slot="start" color="primary"></ion-icon>
+            <ion-icon name="library-outline" slot="start" color="primary"></ion-icon>
             <ion-label color="primary">Tareas</ion-label>
           </ion-item>
           <ion-item (click)="verPostit()">
-            <ion-icon name="" slot="start" color="primary"></ion-icon>
+            <ion-icon name="pin-outline" slot="start" color="primary"></ion-icon>
             <ion-label color="primary">Gestor de Post It</ion-label>
           </ion-item>
           <ion-item (click)="verCalificaciones()">
-            <ion-icon name="" slot="start" color="primary"></ion-icon>
+            <ion-icon name="ribbon-outline" slot="start" color="primary"></ion-icon>
             <ion-label color="primary">Calificaciones</ion-label>
           </ion-item>
           <ion-item (click)="verCirculares()">
-            <ion-icon name="" slot="start" color="primary"></ion-icon>
+            <ion-icon name="reader-outline" slot="start" color="primary"></ion-icon>
             <ion-label color="primary">Circulares</ion-label>
           </ion-item>
           <ion-item (click)="verPhotoAlbum()">
-            <ion-icon name="" slot="start" color="primary"></ion-icon>
+            <ion-icon name="images-outline" slot="start" color="primary"></ion-icon>
             <ion-label color="primary">Gestor Photo Album</ion-label>
           </ion-item>
           <ion-item (click)="verReportes()">
-            <ion-icon name="" slot="start" color="primary"></ion-icon>
+            <ion-icon name="newspaper-outline" slot="start" color="primary"></ion-icon>
             <ion-label color="primary">Reportes</ion-label>
           </ion-item>
           <ion-item (click)="verSoporte()">
-            <ion-icon name="" slot="start" color="primary"></ion-icon>
+            <ion-icon name="settings-outline" slot="start" color="primary"></ion-icon>
             <ion-label color="primary">Soporte Tecnico</ion-label>
           </ion-item>
         </ion-menu-toggle>
