--- a/src/app/pages/nuevo-postit/nuevo-postit.page.html
+++ b/src/app/pages/nuevo-postit/nuevo-postit.page.html
@@ -10,9 +10,31 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content>
 
-  <ion-input type="text" clearOnEdit="true" clearInput label="Titulo del Post It:" labelPlacement="floating">
-  </ion-input>
+  <ion-item class="ion-padding-top ion-padding-bottom">
+    <ion-input type="text" clearOnEdit="true" clearInput label="Titulo del Post It:" labelPlacement="floating"></ion-input>
+  </ion-item>
+  
+  <ion-button expand="block" color="light" class="ion-padding" shape="round" (click)="selectAlumnos()">
+    <ion-icon slot="end" name="chevron-down-outline"></ion-icon>
+    Selecciona los Alumnos: ({{ conteo }} Seleccionados)
+  </ion-button>
+  
+  <ion-item>
+    <ion-textarea placeholder="Descripcion" auto-grow="true" rows="10"></ion-textarea>
+  </ion-item>
+
+  <ion-button (click)="adjuntarArchivos()" expand="block" shape="round" color="medium" class="ion-padding">
+    ADJUNTAR ARCHIVOS
+  </ion-button>
 
 </ion-content>
+
+<footer>
+
+  <ion-button (click)="enviar()" expand="block" shape="round" color="primary" class="ion-padding">
+    ENVIAR
+  </ion-button>
+
+</footer>
