--- a/src/app/pages/padres/circulares/circulares.page.html
+++ b/src/app/pages/padres/circulares/circulares.page.html
@@ -1,13 +1,27 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>circulares</ion-title>
+    <ion-title>Circulares</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">circulares</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+
+  <ion-item *ngFor="let circular of circulares; let i = index">
+      <ion-col size="2">
+        <ion-avatar item-start>
+          <img src="{{circular.url_logo}}" style="width: 80%;">
+        </ion-avatar>
+      </ion-col>
+      <label class="{{circular.clase}}" (click)="verCircular(i)">
+        <p style="margin-bottom: -9px;"> {{circular.fecha_publicacion}} </p>
+        <p style="margin-bottom: -9px;"> {{circular.titulo}} </p>
+        <p> {{circular.descripcion}} </p>
+      </label>
+      <ion-icon name="arrow-forward" slot="end"></ion-icon>
+</ion-item>
+
+<ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
+  <ion-infinite-scroll-content loadingSpinner="crescent" loadingText="Cargando..."></ion-infinite-scroll-content>
+</ion-infinite-scroll>
+
 </ion-content>
