--- a/src/app/pages/padres/multimedia/multimedia.page.html
+++ b/src/app/pages/padres/multimedia/multimedia.page.html
@@ -1,13 +1,21 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>multimedia</ion-title>
+    <ion-title>Multimedia</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">multimedia</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+
+  <ion-card class="multimediaEdit">
+    <img src="../../../assets/img/photoAlbum.jpeg" class="multimediaCards">
+    <h3 style="margin-top: -45px;
+    margin-left: 60px; color: white;"><b>Photo Album</b></h3>
+  </ion-card>
+
+  <ion-card class="multimediaEdit">
+    <img src="../../../assets/img/Videos.jpeg" class="multimediaCards">
+    <h3 style="margin-top: -45px;
+    margin-left: 95px; color: white;"><b>Videos</b></h3>
+  </ion-card>
+
 </ion-content>
