--- a/src/app/pages/padres/tab/tab.page.html
+++ b/src/app/pages/padres/tab/tab.page.html
@@ -1,4 +1,4 @@
-<!-- <ion-menu side="start" menuId="menu" contentId="main" mode="md">
+<ion-menu side="start" menuId="menu" contentId="main" mode="md">
   <ion-header>
     <ion-toolbar class="menu" color="primary">
       <ion-title class="ion-text-center"> MENÚ </ion-title>
@@ -9,12 +9,40 @@
     <ion-item>
       <img src="../../../assets/img/user.jpg" width="60%" slot="start" class="img">
     </ion-item>
-    <ion-menu-toggle *ngFor="let c of componentes">
+    <ion-menu-toggle>
       <ion-list>
         <ion-menu-toggle>
-          <ion-item (click)="navegar( c.redirectTo )">
-            <ion-icon [name]="c.icon" slot="start" color="primary"></ion-icon>
-            <ion-label color="primary">{{ c.name }}</ion-label>
+          <ion-item routerLink="/tab">
+            <ion-icon name="home-outline" slot="start" color="primary"></ion-icon>
+            <ion-label color="primary">Home</ion-label>
+          </ion-item>
+          <ion-item (click)="verEncuestas()">
+            <ion-icon name="document-text-outline" slot="start" color="primary"></ion-icon>
+            <ion-label color="primary">Encuesta</ion-label>
+          </ion-item>
+          <ion-item (click)="verPagos()">
+            <ion-icon name="cash-outline" slot="start" color="primary"></ion-icon>
+            <ion-label color="primary">Mis Pagos</ion-label>
+          </ion-item>
+          <ion-item (click)="verVideoClases()">
+            <ion-icon name="videocam-outline" slot="start" color="primary"></ion-icon>
+            <ion-label color="primary">VideoClases</ion-label>
+          </ion-item>
+          <ion-item (click)="verActividades()">
+            <ion-icon name="calendar-outline" slot="start" color="primary"></ion-icon>
+            <ion-label color="primary">Actividades</ion-label>
+          </ion-item>
+          <ion-item (click)="verNotas()">
+            <ion-icon name="ribbon-outline" slot="start" color="primary"></ion-icon>
+            <ion-label color="primary">Notas</ion-label>
+          </ion-item>
+          <ion-item (click)="verReportes()">
+            <ion-icon name="newspaper-outline" slot="start" color="primary"></ion-icon>
+            <ion-label color="primary">Reportes</ion-label>
+          </ion-item>
+          <ion-item (click)="verSoporte()">
+            <ion-icon name="settings-outline" slot="start" color="primary"></ion-icon>
+            <ion-label color="primary">Soporte Tecnico</ion-label>
           </ion-item>
         </ion-menu-toggle>
       </ion-list>
@@ -33,9 +61,9 @@
       </ion-toolbar>
     </ion-menu-toggle>
   </ion-footer>
-</ion-menu> -->
+</ion-menu>
 
-<!-- <ion-header>
+<ion-header>
   <ion-toolbar color="primary" id="main">
 
     <ion-buttons slot="start">
@@ -45,65 +73,70 @@
     <ion-title class="ion-text-capitalize"> Home </ion-title>
 
   </ion-toolbar>
-</ion-header> -->
-
-<app-header titulo="Home"></app-header>
+</ion-header>
 
 <ion-content>
 
-<div>
-  <ion-tabs>
-    
-    
-    <ion-tab-bar slot="top" class="ion-padding">
-      <ion-tab-button tab="notificaciones">
-        <ion-icon aria-hidden="true" name="notifications"></ion-icon>
-      </ion-tab-button>
-      
-      <ion-tab-button tab="multimedia">
-        <ion-icon aria-hidden="true" name="images"></ion-icon>
-      </ion-tab-button>
-      
-      <ion-tab-button tab="pinboard">
-        <ion-icon aria-hidden="true" name="pin"></ion-icon>
-      </ion-tab-button>
-      
-      <ion-tab-button tab="circulares">
-        <ion-icon aria-hidden="true" name="document-text"></ion-icon>
-      </ion-tab-button>
-    </ion-tab-bar>
-    
-    <ion-fab slot="fixed" vertical="bottom" horizontal="end" style="margin-bottom: 60px;">
-      <ion-fab-button size="medium">
-        <ion-icon style="zoom: 1.2;" name="chevron-up-circle-outline"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-list side="top">
-        <ion-fab-button style="width: 50px; height: 50px;">
-          <ion-icon name="calendar-outline" style="zoom: 1.5;" color="primary"></ion-icon>
+  <div>
+    <ion-tabs>
+
+      <ion-tab-bar slot="top" class="ion-padding">
+        <ion-tab-button tab="notificaciones" (click)="ocultarHome()">
+          <ion-icon aria-hidden="true" name="notifications"></ion-icon>
+        </ion-tab-button>
+
+        <ion-tab-button tab="multimedia" (click)="ocultarHome()">
+          <ion-icon aria-hidden="true" name="images"></ion-icon>
+        </ion-tab-button>
+
+        <ion-tab-button tab="pinboard" (click)="ocultarHome()">
+          <ion-icon aria-hidden="true" name="pin"></ion-icon>
+        </ion-tab-button>
+
+        <ion-tab-button tab="circulares" (click)="ocultarHome()">
+          <ion-icon aria-hidden="true" name="document-text"></ion-icon>
+        </ion-tab-button>
+      </ion-tab-bar>
+
+      <ion-fab slot="fixed" vertical="bottom" horizontal="end" style="margin-bottom: 60px;">
+        <ion-fab-button size="medium">
+          <ion-icon style="zoom: 1.2;" name="chevron-up-circle-outline"></ion-icon>
         </ion-fab-button>
-        <ion-fab-button style="width: 50px; height: 50px;">
-          <ion-icon name="people-outline" style="zoom: 1.5;" color="primary"></ion-icon>
-        </ion-fab-button>
-        <ion-fab-button style="width: 50px; height: 50px;">
-          <ion-icon name="chatbubbles-outline" style="zoom: 1.5;" color="primary"></ion-icon>
-        </ion-fab-button>
-        <ion-fab-button style="width: 50px; height: 50px;" routerLink="/perfil">
-          <ion-icon name="people" style="zoom: 1.5;" color="primary"></ion-icon>
-        </ion-fab-button>
-      </ion-fab-list>
-    </ion-fab>
-    
-  </ion-tabs>
-</div>
-  
-<div>
-  <ion-img src="../../../../assets/img/logo.jpg" class="ion-padding"></ion-img>
-  
-  <ion-label class="ion-padding">Te diriges a las videoclases?</ion-label>
-  
-  <ion-button expand="block" shape="round">
-    Ir a videoclases >
-  </ion-button>
-</div>
+        <ion-fab-list side="top">
+          <ion-fab-button style="width: 50px; height: 50px;">
+            <ion-icon name="calendar-outline" style="zoom: 1.5;" color="primary"></ion-icon>
+          </ion-fab-button>
+          <ion-fab-button style="width: 50px; height: 50px;">
+            <ion-icon name="people-outline" style="zoom: 1.5;" color="primary"></ion-icon>
+          </ion-fab-button>
+          <ion-fab-button style="width: 50px; height: 50px;">
+            <ion-icon name="chatbubbles-outline" style="zoom: 1.5;" color="primary"></ion-icon>
+          </ion-fab-button>
+          <ion-fab-button style="width: 50px; height: 50px;" routerLink="/perfil">
+            <ion-icon name="people" style="zoom: 1.5;" color="primary"></ion-icon>
+          </ion-fab-button>
+        </ion-fab-list>
+      </ion-fab>
+
+    </ion-tabs>
+  </div>
+
+  <ng-container *ngIf="mostrarHome">
+    <div>
+      <br><br><br>
+      <ion-img src="{{ logo }}" class="ion-padding"></ion-img>
+
+      <div class="ion-text-center ion-padding">
+        <ion-label class="ion-padding" color="primary">Te diriges a las videoclases?</ion-label>
+      </div>
+
+      <div class="ion-text-center">
+        <ion-button size="small" shape="round">
+          Ir a videoclases 
+          <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
+        </ion-button>
+      </div>
+    </div>
+  </ng-container>
 
 </ion-content>
