--- a/src/app/pages/postit/postit.page.html
+++ b/src/app/pages/postit/postit.page.html
@@ -4,7 +4,7 @@
     <ion-button (click)="cerrar()" slot="start">
       <ion-icon name="arrow-back-outline" slot="start"></ion-icon>Atras
     </ion-button>
-    
+
     <ion-title>Postit</ion-title>
 
     <ion-button (click)="add()" slot="end">
@@ -29,40 +29,46 @@
     </ion-segment-button>
   </ion-segment>
 
-  <ng-container  *ngIf="showPostits">
+  <ng-container *ngIf="showPostits">
     <ng-container *ngFor="let fecha of postits; let p = index">
       <ion-item-divider color="light" class="cssItem">
         <ion-label>Notas del {{ fecha.date_postit[0].date_grupo }}</ion-label>
       </ion-item-divider>
-      <ng-container *ngFor="let postit of fecha.date_postit; let i = index">
-        <ion-row>
-          <ion-col size="6">
-            <div class="color1" (click)="detallePostit(p, i)">
-              <label class="textfechalit">{{ postit.fecha }}</label>
-              <br>
-              <label class="textTitulo biography2">{{ postit.titulo }}</label>
-              <div class="biography">{{ postit.descripcion }}</div>
-              <label class="textPara">Para:</label>
-              <br>
-              <label class="textCodigo"> {{ postit.alumno_name }} </label>
-              <br>
-              <label class="textPara">{{ postit.seccion }}</label>
-            </div>
-          </ion-col>
-        </ion-row>
+      <ng-container >
+        <ion-grid fixed>
+          <ion-row>
+            <ion-col size="6" *ngFor="let postit of fecha.date_postit; let i = index">
+              <div class="color1" (click)="detallePostit(p, i)">
+                <label class="textfechalit">{{ postit.fecha }}</label>
+                <br>
+                <label class="textTitulo biography2">{{ postit.titulo }}</label>
+                <div class="biography">{{ postit.descripcion }}</div>
+                <label class="textPara">Para:</label>
+                <br>
+                <label class="textCodigo"> {{ postit.alumno_name }} </label>
+                <br>
+                <label class="textPara">{{ postit.seccion }}</label>
+              </div>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
       </ng-container>
     </ng-container>
   </ng-container>
 
   <ng-container *ngIf="showAlumnos">
     <ion-list>
-      <ion-item *ngFor="let alumno of alumnos" detail>
+      <ion-item *ngFor="let alumno of alumnos; let i = index" detail>
         <ion-avatar slot="start">
           <img src="{{ alumno.url_foto }}" />
         </ion-avatar>
-        <ion-label> {{ alumno.nombre }} </ion-label>
+        <ion-label (click)="postitPorAlumno(i)"> {{ alumno.nombre }} </ion-label>
       </ion-item>
     </ion-list>
   </ng-container>
+
+  <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 
 </ion-content>
