--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,8 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
+@import "swiper/css/bundle";
+
 .errors-contact {
     background: #F2DEDE;
     border-radius: 7px;
@@ -57,6 +59,14 @@
     @media screen and (max-width: 420px) {
         --height: 45% !important;
         --width: 90% !important;
+    }
+  }
+
+  .transparent-modal {
+    --backgroun: rgba(44, 39, 45, 0.2);
+
+    &::part(content) {
+      backdrop-filter: blur(12px);
     }
   }
 
